--- a/templates/thesis.html
+++ b/templates/thesis.html
@@ -4,6 +4,7 @@
     <title>Thesis Details</title>
     <!-- Include Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css') }}"> 
 </head>
 <body>
             <!-- Navigation bar -->
@@ -49,5 +50,7 @@
     </div>
     <!-- Include Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="{{url_for('static', filename='js/main.js') }}"></script>
+
 </body>
 </html>
