--- a/templates/add_data.html
+++ b/templates/add_data.html
@@ -5,25 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GTS</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    
-    <style>
-        /* Custom styles for the form */
-        h1, h2, h3 {
-            padding:30px 0px;
-        }
-        .form-label {
-            font-weight: bold;
-        }
-        .form-control {
-            margin-bottom: 10px;
-        }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        .form-submit {
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css') }}"> 
 </head>
 <body>
             <!-- Navigation bar -->
@@ -286,30 +268,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.jquery.min.js"></script>
     <link href="https://cdn.rawgit.com/harvesthq/chosen/gh-pages/chosen.min.css" rel="stylesheet"/>
-    <script>
-        $(document).ready(function() {   
-            $("#id").prepend("<option value='' >&nbsp;</option>");
 
-            $(".chosen-select").chosen({
-               no_results_text: "Oops, nothing found!"
-             })
-           });
-    </script>
-    <!-- Script for changing institute options according to university selection -->
     <script>
-        $(document).ready(function() {
-            $("#uni1").change(function() {
-                var uni_id = $(this).val();
-                institute_list = {{ ins_list|tojson }};
-                var options = '';
-                for (var i = 0; i < institute_list.length; i++) {
-                    if (institute_list[i][2] == uni_id) {
-                        options += '<option value="' + institute_list[i][0] + '">' + institute_list[i][1] + '</option>';
-                    }
-                }
-                $("#ins").html(options);
-            });
-        });
+        institute_list= {{ ins_list|tojson }}
     </script>
+    <script src="{{url_for('static', filename='js/main.js') }}"></script>
+
 </body>
 </html>
