--- a/templates/result.html
+++ b/templates/result.html
@@ -3,39 +3,8 @@
 <html>
 <head>
     <title>SQL Query Response</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-        }
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css') }}"> 
 
-        .container {
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        .success {
-            color: #155724;
-            background-color: #d4edda;
-            border-color: #c3e6cb;
-            padding: 10px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-        }
-
-        .fail {
-            color: #721c24;
-            background-color: #f8d7da;
-            border-color: #f5c6cb;
-            padding: 10px;
-            margin-bottom: 20px;
-            border-radius: 5px;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
@@ -58,19 +27,7 @@
             </div>
         {% endif %}
     </div>
+    <script src="{{url_for('static', filename='js/main.js') }}"></script>
 
-    <script type="text/javascript">
-        function countdown() {
-            var i = document.getElementById('counter');
-            if (parseInt(i.innerHTML) <= 0) {
-                location.href = '/';
-                return;
-            }
-            i.innerHTML = parseInt(i.innerHTML) - 1;
-        }
-        setInterval(function () {
-            countdown();
-        }, 1000);
-    </script>
 </body>
 </html>
