--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -5,28 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GTS</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    
-    <style>
-        /* Custom styles for the form */
-        h1, h2, h3 {
-            padding:30px 0px;
-        }
-        .form-label {
-            font-weight: bold;
-        }
-        .form-control {
-            margin-bottom: 10px;
-        }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        .form-submit {
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css') }}"> 
 </head>
 <body>
-            <!-- Navigation bar -->
             <nav style="padding: 1.5rem 6rem; font-size: 25px;" class="navbar navbar-expand-sm bg-dark navbar-dark">
                 <a  style="font-size: 25px;" class="navbar-brand" href="/">GTS</a>
                 <ul class="navbar-nav">
@@ -86,7 +67,8 @@
             <p class="text-muted">No results found.</p>
         {% endif %}
     </div>
-    <!-- Include Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="{{url_for('static', filename='js/main.js') }}"></script>
+
 </body>
 </html>
